  * minor incompatible change: SB-DEBUG:*DEBUG-PRINT-FOO* variables
    are no longer supported, and SB-DEBUG:*DEBUG-PRINT-VARIABLE-ALIST*
    has been moved to the SB-EXT package (temporarily re-exported from
    SB-DEBUG).
  * minor incompatible change: SB-C::*COMPILER-ERROR-PRINT-FOO* variables
    are no longer supported: use SB-EXT:*COMPILER-PRINT-VARIABLE-ALIST*
    instead. 
  * bug fix: Cyclic structures and unprintable objects in compiler
    messages no longer cause errors. (reported by Bruno Haible)
  * bug fix: READ, READ-PRESERVING-WHITESPACE, READ-DELIMITED-LIST,
    and READ-FROM-STRING all now return a primary value of NIL if
    *READ-SUPPRESS* is true.  (reported by Bruno Haible for CMUCL)
  * bug fix: Default value of EOF-ERROR-P in READ-FROM-STRING is true.
    (reported by Bruno Haible for CMUCL)
  * bug fix: ERROR now signals a TYPE-ERROR if the arguments to ERROR
    do not designate a condition.  (reported by Bruno Haible for
    CMUCL)
  * bug fix: UNINTERN, USE-PACKAGE, IMPORT and EXPORT all signal an
    SB-EXT:NAME-CONFLICT condition (subtype of PACKAGE-ERROR) in the
    name conflict situations in CLHS 11.1.1.2.5, and provide a restart
    permitting resolution in favour of any of the conflicting symbols.
    (reported by Bruno Haible for CMUCL)
  * FORMAT compile-time argument count checking has been enhanced.
    (report from Bruno Haible for CMUCL)
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** RENAME-PACKAGE allows all package designators as new package
       names.

changes in sbcl-0.8.16 relative to sbcl-0.8.15:
  * enhancement: saving cores with foreign code loaded is now
    supported on x86/NetBSD and sparc/Linux in addition to the previously
    supported platforms.
  * bug fix: on some platforms repeated installations caused multiple
    copies of HTML documentation to be installed -- should not happen
    any more. (reported by Stefan Scholl)